--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -2192,7 +2192,7 @@ keys:
               keys:
                 border_router:
                   type: bool
-                  description: Configure pim border router. EOS default is false
+                  description: Configure PIM border router. EOS default is false.
                 dr_priority:
                   type: int
                   convert_types:
@@ -7753,7 +7753,7 @@ keys:
               keys:
                 border_router:
                   type: bool
-                  description: Configure pim border router. EOS default is false
+                  description: Configure PIM border router. EOS default is false.
                 dr_priority:
                   type: int
                   convert_types:
@@ -14914,7 +14914,7 @@ keys:
               keys:
                 border_router:
                   type: bool
-                  description: Configure pim border router. EOS default is false
+                  description: Configure PIM border router. EOS default is false.
                 dr_priority:
                   type: int
                   convert_types:
