--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -9129,7 +9129,7 @@ keys:
         description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
           For asdot notation in YAML inputs, the value *must* be put in quotes to
-          prevent being interpreted as a float number.'
+          prevent it from being interpreted as a float number.'
         convert_types:
         - int
       router_id:
@@ -9308,7 +9308,7 @@ keys:
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
                 For asdot notation in YAML inputs, the value *must* be put in quotes
-                to prevent being interpreted as a float number.'
+                to prevent it from being interpreted as a float number.'
       peer_groups:
         type: list
         primary_key: name
@@ -9328,7 +9328,7 @@ keys:
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
                 For asdot notation in YAML inputs, the value *must* be put in quotes
-                to prevent being interpreted as a float number.'
+                to prevent it from being interpreted as a float number.'
               convert_types:
               - int
             local_as:
@@ -9336,7 +9336,7 @@ keys:
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
                 For asdot notation in YAML inputs, the value *must* be put in quotes
-                to prevent being interpreted as a float number.'
+                to prevent it from being interpreted as a float number.'
               convert_types:
               - int
             description:
@@ -9552,7 +9552,7 @@ keys:
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
                 For asdot notation in YAML inputs, the value *must* be put in quotes
-                to prevent being interpreted as a float number.'
+                to prevent it from being interpreted as a float number.'
               convert_types:
               - int
             local_as:
@@ -9560,7 +9560,7 @@ keys:
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
                 For asdot notation in YAML inputs, the value *must* be put in quotes
-                to prevent being interpreted as a float number.'
+                to prevent it from being interpreted as a float number.'
               convert_types:
               - int
             as_path:
@@ -9749,7 +9749,7 @@ keys:
               description: 'BGP AS <1-4294967295> or AS number in asdot notation "<1-65535>.<0-65535>".
 
                 For asdot notation in YAML inputs, the value *must* be put in quotes
-                to prevent being interpreted as a float number.'
+                to prevent it from being interpreted as a float number.'
             peer:
               type: str
               description: Key only used for documentation or validation purposes
@@ -11103,7 +11103,7 @@ keys:
                       "<1-65535>.<0-65535>".
 
                       For asdot notation in YAML inputs, the value *must* be put in
-                      quotes to prevent being interpreted as a float number.'
+                      quotes to prevent it from being interpreted as a float number.'
                     convert_types:
                     - int
             neighbors:
@@ -11125,7 +11125,7 @@ keys:
                       "<1-65535>.<0-65535>".
 
                       For asdot notation in YAML inputs, the value *must* be put in
-                      quotes to prevent being interpreted as a float number.'
+                      quotes to prevent it from being interpreted as a float number.'
                     convert_types:
                     - int
                   password:
@@ -11161,7 +11161,7 @@ keys:
                       "<1-65535>.<0-65535>".
 
                       For asdot notation in YAML inputs, the value *must* be put in
-                      quotes to prevent being interpreted as a float number.'
+                      quotes to prevent it from being interpreted as a float number.'
                     convert_types:
                     - int
                   as_path:
@@ -11312,7 +11312,7 @@ keys:
                       "<1-65535>.<0-65535>".
 
                       For asdot notation in YAML inputs, the value *must* be put in
-                      quotes to prevent being interpreted as a float number.'
+                      quotes to prevent it from being interpreted as a float number.'
                     convert_types:
                     - int
                   peer_group:
