--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -161,6 +161,12 @@ repos:
         files: ansible_collections/arista/avd/roles/[a-z_]+/schemas
         pass_filenames: false
 
+      - id: version
+        name: Sync version from galaxy.yml to PyAVD
+        entry: sh -c 'PYTHONPATH=python-avd/scripts:$PYTHONPATH python -c "import custom_build_backend,sys;custom_build_backend._insert_version();sys.exit(0)"'
+        language: system
+        files: ansible_collections/arista/avd/galaxy.yml
+
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.32.1
     hooks:
