--- a/ansible_collections/arista/avd/requirements.txt
+++ b/ansible_collections/arista/avd/requirements.txt
@@ -11,3 +11,4 @@ cryptography>=38.0.4
 # No anta requirement until the eos_validate_state integration is out of preview.
 # anta>=1.0.0
 aristaproto>=0.1.1
+pyavd==4.6.0
