Feat(eos_designs): stun ssl profile support

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -514,9 +514,15 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+management security
+   ssl profile profileA
+      trust certificate aristaDeviceCertProvisionerDefaultRootCA.crt
+      certificate profileA.crt key profileA.key
+!
 stun
    client
       server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
          ip address 172.16.0.1
+         ssl profile profileA
 !
 end
