--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
@@ -393,9 +393,15 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+management security
+   ssl profile profileC
+      trust certificate aristaDeviceCertProvisionerDefaultRootCA.crt
+      certificate profileC.crt key profileC.key
+!
 stun
    server
       local-interface Ethernet1
       local-interface Ethernet2
+      ssl profile profileC
 !
 end
