--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
@@ -195,9 +195,15 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+management security
+   ssl profile SSL-STUN
+      trust certificate aristaDeviceCertProvisionerDefaultRootCA.crt
+      certificate SSL-STUN.crt key SSL-STUN.key
+!
 stun
    client
       server-profile INET-autovpn-rr3-Ethernet1
          ip address 10.7.7.7
+         ssl profile SSL-STUN
 !
 end
