--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-no-default-policy.cfg
@@ -284,13 +284,21 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+management security
+   ssl profile SSL-STUN
+      trust certificate aristaDeviceCertProvisionerDefaultRootCA.crt
+      certificate SSL-STUN.crt key SSL-STUN.key
+!
 stun
    client
       server-profile INET-cv-pathfinder-pathfinder-Ethernet1
          ip address 10.7.7.7
+         ssl profile SSL-STUN
       server-profile INET-cv-pathfinder-pathfinder-Ethernet3
          ip address 10.9.9.9
+         ssl profile SSL-STUN
       server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
          ip address 172.16.0.1
+         ssl profile SSL-STUN
 !
 end
