--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
@@ -15,12 +15,14 @@ bgp_peer_groups:
 wan_route_servers:
   # Testing having the interface configured with DHCP
   - hostname: autovpn-rr1
+    disable_stun_ssl: true
     path_groups:
       - name: INET
         interfaces:
           - name: Ethernet1
             ip_address: 10.7.7.7/31
   - hostname: autovpn-rr2
+    disable_stun_ssl: true
 
 wan_ipsec_profiles:
   control_plane:
