--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_MULTI_RR_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_MULTI_RR_TESTS.yml
@@ -4,7 +4,9 @@
 wan_route_servers:
   # Not testing the overloading
   - hostname: cv-pathfinder-pathfinder1
+    stun_ssl_profile: profileB
   - hostname: cv-pathfinder-pathfinder2
+    stun_ssl_profile: profileC
   # This one is not in the inventory pathfinder1 & 2
   - hostname: cv-pathfinder-pathfinder3
     vtep_ip: 6.6.6.6
