--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -30,6 +30,7 @@ bgp_peer_groups:
 wan_route_servers:
   # Not testing the overloading
   - hostname: cv-pathfinder-pathfinder
+    stun_ssl_profile: profileA
 
 wan_ipsec_profiles:
   control_plane:
