--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3385,6 +3385,7 @@ keys:
           - on-startup-config
           - on-maintenance
         trigger_on_maintenance:
+          description: Settings required for trigger 'on-maintenance'.
           type: dict
           keys:
             operation:
@@ -3406,6 +3407,7 @@ keys:
                   type: str
             stage:
               type: str
+              required: true
               valid_values:
               - after
               - before
