--- a/ansible_collections/arista/avd/requirements-dev.txt
+++ b/ansible_collections/arista/avd/requirements-dev.txt
@@ -22,4 +22,4 @@ ansible-doc-extractor>=0.1.10
 tox
 pydantic>=2.3.0
 aristaproto[compiler]>=0.1.1
-pyavd==4.6.0
+--config-settings editable_mode=compat -e ../../../python-avd
