--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -84,6 +84,9 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up Python 3
         uses: actions/setup-python@v4
+        with:
+          python-version: |
+            3.11
       - name: Install Python requirements
         run: |
           pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
